# pycounts_mb2

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_mb2/: __init__.py
tests/: test_pycounts_mb2.py
